--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ h2 = "0.1.5"
 iovec = "0.1"
 log = "0.4"
 net2 = { version = "0.2.32", optional = true }
+raii-counter = "0.1"
 time = "0.1"
 tokio = { version = "0.1.7", optional = true }
 tokio-executor = { version = "0.1.0", optional = true }
@@ -138,4 +139,3 @@ required-features = ["runtime"]
 name = "server"
 path = "tests/server.rs"
 required-features = ["runtime"]
-
